--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -193,16 +193,9 @@
      <!-- USER MANUAL / HELP-->
  <input type="checkbox" id="helpCheckBox">
  <label class="help-container"  for="helpCheckBox" >
-     <label class="button helpIconButton hoverableButton" for="helpCheckBox" data-toggle="tooltip" data-bs-placement="left" data-bs-offset="0,7"
-     title="Help">
-     <i class="fa-solid fas fa-question"></i>
+     <label class="button helpIconButton hoverableButton" for="helpCheckBox" data-bs-toggle="modal" data-bs-target="#loginQ1">
+     <h5 class="text-white fw-bold textShadow rotateText">HELP</h5>
      </label>
-     <ul class="helpOptions">
-         <li>
-             <span class="btn-label hoverableButton" data-bs-toggle="modal" data-bs-target="#loginQ1">How can I create An Account?</span>
-         </li>
-         </li>
-     </ul>
  </label>
  
  <!-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- USER MANUAL / HELP MODALS -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
@@ -212,9 +205,11 @@
  <div class="modal fade" id="loginQ1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
  <div class="modal-dialog modal-dialog-centered modal-xl">
      <div class="modal-content">
-         <div class="modal-header text-center d-flex justify-content-start">
-             <img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/avatar.png' %}"><h5 class="modal-title" id="exampleModalLabel"> PPMS | User Assistance</h5>
-         </div>
+        <div class="modal-header text-center d-flex justify-content-between">
+            <div class="d-flex justify-content-center align-items-center"><img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/avatar.png' %}"><h5 class="modal-title" id="exampleModalLabel"> PPMS | User Assistance</h5>
+            </div>
+            <button type="button" class="btn hoverableButtonRed" style="background-color: #EF3A25; color: white; border-radius: 5px;" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times"></i></button>
+        </div>
          <div class="modal-body" style="padding:2% 10% 2% 10%;">
              <div>
                  <img class="img-fluid" alt="Responsive image" src="{% static '/Media/userManual/createAccount.png' %}">
