--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -1520,6 +1520,10 @@ html {
 
 
 /* USER MANUAL/HELP BUTTON STYLING */
+.rotateText{
+  transform: rotate(-90deg);
+}
+
 #helpCheckBox{
   position:fixed;
   bottom:10px;
@@ -1529,19 +1533,51 @@ html {
 
 .help-container{
   position:fixed;
-  bottom:10px;
-  right:25px;
+  bottom:40vh;
+  right:0px;
   cursor:pointer;
   z-index: 1040;
+  max-width: 35px;
+  display: flex;
 }
 
 .helpIconButton{
-  width:50px;
-  height:50px;
+  justify-content: center;
+  padding:15px;
+  display: flex;
+  width:100%;
+  height:85px;
   background:#188045;
-  border-radius: 100%;
+  border-radius: 20px 0px 0px 20px ;
   cursor:pointer;
-  box-shadow: 8px 5px 5px #aaaaaa;
+  box-shadow: 8px 5px 5px #555555;
+  text-align: center;
+  align-items:center;
+  animation-duration:3s;
+  animation-name:animateHelpButton;
+  animation-iteration-count: 99;
+  
+}
+
+@keyframes animateHelpButton {
+  0%{
+    transform:  translate3d(0,0,0);
+  }
+  20%{
+    transform: translate3d(-3px,0,0); 
+  }
+  40%{
+    transform: translate3d(0px,0,0);
+  }
+  60%{
+    transform: translate3d(-3px,0,0);
+  }
+  80%{
+    transform: translate3d(-1px,0,0); 
+  }
+  100%{
+    transform:  translate3d(0,0,0);
+  }
 }
 
 .helpIconButton i{
@@ -1557,11 +1593,25 @@ html {
 .helpOptions{
   list-style-type: none;
   position:absolute;
-  bottom:45px;
-  right:0px;
+  bottom:-150px;
+  right:60px;
   display:none;
   max-height: 100vh;
   z-index: 1040;
+  animation-duration:0.7s;
+  animation-name:animateOptions;
+  animation-fill-mode: forwards;
+}
+
+@keyframes animateOptions {
+  0%{
+    transform: translate3d(500px,0,0); opacity:0.25;
+  }
+ 
+  100%{
+    transform:  translate3d(0,0,0); opacity:1;
+  }
+  
 }
 
 .helpOptions li{
@@ -1606,6 +1656,11 @@ html {
     color:white;
     font-size: 15px;
   }
+
+  .helpIconButton{
+    height: 70px;
+    text-align: center;
+  }
   
   .btn-label{
     padding:10px 25px;
@@ -1625,16 +1680,16 @@ html {
   .helpOptions{
     list-style-type: none;
     position:absolute;
-    bottom:45px;
-    right:0px;
+    bottom:-200px;
+    right:40px;
     display:none;
     z-index: 1040;
   }
 
   .help-container{
     position:fixed;
-    bottom:10px;
-    right:10px;
+    bottom:40vh;
+    right:0px;
     cursor:pointer;
   }
 }
